Стилизация главной страницы десктоп

--- a/source/sass/description.scss
+++ b/source/sass/description.scss
@@ -33,4 +33,8 @@
   .description__general-text {
     width: 440px;
   }
+  .description__title,
+  .description__general-title {
+    margin-top: 56px;
+  }
 }
