--- a/source/sass/interesting.scss
+++ b/source/sass/interesting.scss
@@ -86,5 +86,6 @@
   .interesting__map-container {
     background-image: url("../img/desktop/map-desktop.jpg");
     width: 1200px;
+    margin-top: 66px;
   }
 }
