--- a/source/sass/town.scss
+++ b/source/sass/town.scss
@@ -14,7 +14,7 @@
 }
 
 .town__text-mobile {
-  max-width: 220px;
+  width: 220px;
 }
 
 .town__title,
@@ -147,26 +147,45 @@
 }
 
 @media (min-width: $desktop-width) {
-  .town__souvenirs,
-  .town__food {
-    margin-left: 152px;
+  .town,
+  .town__container {
+    margin-top: 39px;
   }
   .town__souvenirs,
   .town__food,
   .town__housing {
-    width: 285px;
+    width: 400px;
+  }
+  .town__souvenirs,
+  .town__food {
+    margin-left: 0;
   }
   .town__housing::before{
-    left: 103px;
+    left: 162px;
+    top: 11%;
   }
   .town__souvenirs::before {
-    left: 544px;
+    left: 968px;
+    top: 9%;
   }
   .town__food::before {
-    left: 974px;
+    left: 562px;
+    top: 13%;
+  }
+  .town__title {
+    margin-top: 93px;
   }
   .town__text {
     width: 285px;
+    margin: 0 auto;
+    margin-top: 22px;
+    line-height: 1.7;
+  }
+  .town__text-desktop {
+    width: 285px;
+  }
+  .town__text-addition {
+    display: block;
   }
   .town__img {
     display: none;
