--- a/source/sass/form-feedback.scss
+++ b/source/sass/form-feedback.scss
@@ -1,5 +1,8 @@
 .form-feedback__title {
   text-align: center;
+  font-size: 18px;
+  margin: 0;
+  margin-top: 18px;
 }
 
 .form-feedback__representation,
@@ -8,7 +11,7 @@
 .form-feedback__attractions,
 .form-feedback__description {
   border-top: 1px solid $basic-gray;
-  margin-top: 20px;
+  margin-top: 17px;
 }
 
 .form-feedback__basic-info input::-webkit-input-placeholder,
@@ -23,24 +26,29 @@
   text-transform: uppercase;
 }
 
+.form-feedback__basic-info label {
+  font-size: 14px;
+}
+
 .form-feedback__basic-info input {
   font-weight: 700;
   background-color: $gray-input;
   border: none;
   margin-top: 20px;
+  font-size: 19px;
+}
+
+.form-feedback__basic-info {
+  margin-left: 20px;
 }
 
 .form-feedback__first-area {
   padding: 19px 48px 19px 26px;
+  margin-left: 6px;
 }
 
 .form-feedback__second-area {
   margin-left: 10px;
-}
-
-.form-feedback__first-area,
-.form-feedback__third-area {
-  margin-left: 16px;
 }
 
 .form-feedback__first-area,
@@ -53,6 +61,7 @@
 .form-feedback__second-area,
 .form-feedback__third-area {
   padding: 19px 18px 19px 15px;
+  margin-left: 17px;
 }
 
 /*Блок "Контактная информация/form-feedback__connection*/
@@ -62,17 +71,24 @@
   position: relative;
 }
 
+.form-feedback__title-mob {
+  margin-top: 26px;
+}
+
 .form-feedback__data-info input {
   border: none;
-  background-color: $gray-input;
-  padding: 20px 57px 20px 43px;
+  background-color: #f2f2f2;
+  padding: 20px 61px 20px 23px;
   font-weight: 700;
   margin-top: 5px;
+  margin-left: 19px;
+  font-size: 18px;
 }
 
 .form-feedback__data-info label {
   text-transform: uppercase;
   margin-left: 42px;
+  font-size: 14px;
 }
 
 .form-feedback__decoration-phone-container {
@@ -124,7 +140,7 @@
 }
 
 .form-feedback__impression-item {
-  margin-top: 43px;
+  margin-top: 40px;
 }
 
 .form-feedback__impression-item:last-child {
@@ -172,10 +188,19 @@
 }
 
 .form-feedback__attractions-item {
-  margin-top: 43px;
+  margin-top: 34px;
+}
+
+.form-feedback__attractions-item:nth-child(2) {
+  margin-top: 54px;
+}
+
+.form-feedback__attractions-item:nth-child(3) {
+  margin-top: 54px;
 }
 
 .form-feedback__attractions-item:last-child {
+  margin-top: 54px;
   margin-bottom: 43px;
 }
 
@@ -220,12 +245,14 @@
 }
 
 .form-feedback__description-text {
-  max-width: 266px;
-  height: 160px;
-  background-color: $gray-input;
+  max-width: 231px;
+  height: 148px;
+  background-color: #f2f2f2;
   resize: none;
   border: none;
-  padding: 20px 0 0 13px;
+  margin-top: 16px;
+  padding: 13px 26px 0 24px;
+  line-height: 1.3;
 }
 
 .form-feedback__description-text::-webkit-input-placeholder {
@@ -242,10 +269,10 @@
   text-transform: uppercase;
   text-decoration: none;
   color: $basic-white;
-  padding: 17px 55px;
+  padding: 17px 45px;
   display: block;
   margin: 0 auto;
-  margin-top: 51px;
+  margin-top: 39px;
   margin-bottom: 76px;
   max-width: 280px;
   border: 0;
