Стилизация форрмы планшет

--- a/source/sass/form-feedback.scss
+++ b/source/sass/form-feedback.scss
@@ -192,7 +192,7 @@
 }
 
 .form-feedback__attractions-item:nth-child(2) {
-  margin-top: 54px;
+  margin-top: 45px;
 }
 
 .form-feedback__attractions-item:nth-child(3) {
@@ -247,7 +247,7 @@
 .form-feedback__description-text {
   max-width: 231px;
   height: 148px;
-  background-color: #f2f2f2;
+  background-color: $gray-input;
   resize: none;
   border: none;
   margin-top: 16px;
@@ -297,7 +297,6 @@
     flex-wrap: wrap;
     margin: 0 auto;
     max-width: 768px;
-    justify-content: space-between;
   }
   .form-feedback__impression {
     order: -1;
@@ -306,20 +305,62 @@
     margin: 0 auto;
   }
   .form-feedback__impression-list{
-    padding-left: 18px;
+    padding-left: 77px;
+  }
+  .form-feedback__impression-item:first-child {
+    margin-top: 73px;
+  }
+  .form-feedback__impression-item:nth-child(2) {
+    margin-top: 51px;
+  }
+  .form-feedback__impression-item:last-child {
+    margin-top: 51px;
+  }
+  .form-feedback__basic-info input {
+    margin-top: 18px;
+  }
+  .form-feedback__first-area{
+    padding: 19px 39px 19px 26px;
+  }
+  .form-feedback__second-area {
+    padding: 19px 2px 25px 15px;
+  }
+  .form-feedback__third-area{
+    padding: 19px 8px 19px 15px;
+  }
+  .form-feedback__title-repesentation{
+    margin-left: 111px;
   }
   .form-feedback__title{
     text-align: start;
+    font-size: 21px;
+    margin-top: 63px;
+  }
+  .form-feedback__basic-info {
+    margin-left: 111px;
+  }
+  .form-feedback__basic-info-posititon {
+    margin-top: 35px;
+  }
+  .form-feedback__title-mob {
+    margin-left: 59px;
+  }
+  .form-feedback__data-info {
+    margin: 19px 0 0 40px;
+  }
+  .form-feedback__data-info-position{
+    margin: 25px 0 0 40px;
   }
   .form-feedback__data-info input{
-    padding: 20px 468px 20px 43px;
+    margin-top: 8px;
+    padding: 19px 427px 18px 23px;
   }
   .form-feedback__decoration-phone-container,
   .form-feedback__decoration-mail-container {
-    width: 60px;
-    height: 60px;
-    top: 34%;
-    left: 709px;
+    width: 58px;
+    height: 57px;
+    top: 38%;
+    left: 609px;
   }
   .form-feedback__representation,
   .form-feedback__connection,
@@ -329,39 +370,75 @@
     border-top: none;
     max-width: 768px;
   }
+  .form-feedback__title-connection {
+    text-align: center;
+    margin: 45px 0 0 0;
+  }
   .form-feedback__attractions {
     margin: 0 auto;
     min-width: 490px;
+    margin-top: 51px;
   }
   .form-feedback__attractions-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    padding: 0 0 0px 68px;
   }
   .form-feedback__attractions-item {
     margin-top: 43px;
     margin-left: 105px;
   }
+  .form-feedback__attractions-item:nth-child(2) {
+    margin-top: 45px;
+    margin-left: 95px;
+  }
+  .form-feedback__attractions-item:nth-child(3) {
+    margin-top: 62px;
+    margin-left: 105px;
+  }
   .form-feedback__attractions-item:last-child {
-    margin-left: 125px;
+    margin-left: 115px;
+    margin-top: 61px;
+    margin-bottom: 0;
   }
   .form-feedback__title-attractions {
     text-align: center;
+    width: 300px;
+    margin: 0 auto;
+  }
+  .form-feedback__description-container {
+    margin-top: 37px;
+  }
+  .form-feedback__description {
+    margin: 0 auto;
+    margin-top: 60px;
   }
   .form-feedback__description-text {
-    min-width: 768px;
+    min-width: 598px;
+    height: 141px;
+    padding: 19px 26px 0px 24px;
   }
   .form-feedback__description-text input {
     font-size: 180px;
   }
+  .form-feedback__button-container{
+    margin: 0 auto;
+    max-width: 648px;
+    display: flex;
+    flex-wrap: wrap;
+  }
   .form-feedback__button {
-    margin-left: 0;
-    padding: 17px 75px;
+    margin-top: 55px;
+    padding: 17px 75px 17px 66px;
     max-width: 324px;
   }
   .form-feedback__addition{
     display: block;
-    margin-top: 78px;
+    margin-top: 73px;
+    margin-left: 163px;
+    text-transform: uppercase;
+    font-size: 14px;
   }
 }
 
