--- a/source/sass/social.scss
+++ b/source/sass/social.scss
@@ -113,6 +113,7 @@
     flex-wrap: wrap;
     max-width: 647px;
     margin: 0 auto;
+    margin-top: 31px;
   }
   .social__links {
     margin: 0 auto;
