--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -19,5 +19,6 @@
   .page__container {
     max-width: $desktop-width-container;
     margin: 0 auto;
+    box-shadow: 0px 5px 15px $gray-border-shadow;
   }
 }
