--- a/source/sass/social.scss
+++ b/source/sass/social.scss
@@ -137,7 +137,14 @@
     max-width: 960px;
     margin: 0 auto;
   }
+  .social-feedback {
+    margin-top: 112px;
+  }
   .social__links {
     margin: 0 auto;
+    margin-bottom: 36px;
+  }
+  .social__dev::after {
+    top: -6%;
   }
 }
