Стилизация каталога - десктоп

--- a/source/sass/social.scss
+++ b/source/sass/social.scss
@@ -136,6 +136,7 @@
   .social {
     max-width: 960px;
     margin: 0 auto;
+    margin-top: 132px;
   }
   .social-feedback {
     margin-top: 112px;
