--- a/source/sass/description.scss
+++ b/source/sass/description.scss
@@ -83,7 +83,10 @@
 
 @media (min-width: $desktop-width) {
   .description {
-    margin-top: 44px;
+    margin-top: 34px;
+  }
+  .description-border {
+    margin-top: 62px;
   }
   .description__text {
     margin-top: 32px;
