--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -128,6 +128,12 @@
   .main-nav {
     max-width: 1200px;
   }
+  .main-nav__item:nth-child(3) {
+    margin-left: 0;
+  }
+  .main-nav__item:nth-child(4) {
+    margin-left: 0;
+  }
   .main-nav__item--logo::after {
     background-image: url("../../../img/desktop/logotype-desktop.svg");
     width: 187px;
