--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -30,13 +30,8 @@
   background-color: $blue-active;
 }
 
-.main-nav__link span:active {
+.main-nav__link .main-nav__text:active {
   opacity: 0.3;
-}
-
-.main-nav__link:active:disabled {
-  background-color: $gray-disable;
-  color: $basic-white;
 }
 
 .main-nav__link--size-a {
@@ -80,6 +75,10 @@
   cursor: pointer;
 }
 
+.main-nav__toggle:hover {
+  opacity: 0.6;
+}
+
 @media (min-width: $tablet-width) {
   .main-nav {
     max-width: 768px;
@@ -90,6 +89,21 @@
     flex-wrap: wrap;
     flex-direction: row;
   }
+  .main-nav__text:hover {
+    color: $blue-hover;
+  }
+  .main-nav__text:active {
+    color: $blue-active;
+  }
+  .main-nav__text:active:disabled {
+    background-color: $gray-disable;
+    color: $basic-white;
+  }
+  .main-nav__link:hover,
+  .main-nav__link:active {
+    background-color: transparent;
+  }
+
   .main-nav__item {
     width: 20%;
   }
