Оптимизация графики на главной странице

--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -59,7 +59,7 @@
     max-width: 768px;
   }
   .features__container {
-    background-image: url("../img/tablet/devil-bridge.jpg");
+    background-image: url("../img/tablet/devil-bridge.webp");
     background-repeat: no-repeat;
     background-size: 100%;
     width: 512px;
@@ -106,7 +106,7 @@
     margin-top: 81px;
   }
   .features__container {
-    background-image: url("../img/desktop/photo-bridge.jpg");
+    background-image: url("../img/desktop/photo-bridge.webp");
     width: 800px;
   }
   .features__text {
