--- a/source/sass/interesting.scss
+++ b/source/sass/interesting.scss
@@ -67,7 +67,7 @@
     display: none;
   }
   .interesting__map-container {
-    background-image: url("../img/tablet/map-tablet@1x.jpg");
+    background-image: url("../img/tablet/map-tablet@1x.webp");
     height: 350px;
     width: 768px;
     margin-top: 58px;
@@ -84,7 +84,7 @@
     width: 1200px;
   }
   .interesting__map-container {
-    background-image: url("../img/desktop/map-desktop@1x.jpg");
+    background-image: url("../img/desktop/map-desktop@1x.webp");
     width: 1200px;
     margin-top: 66px;
   }
