--- a/source/sass/town.scss
+++ b/source/sass/town.scss
@@ -93,7 +93,7 @@
     display: none;
   }
   .town__img-container {
-    background-image: url("../img/tablet/photo-city-tablet.jpg");
+    background-image: url("../img/tablet/photo-city-tablet.webp");
     background-repeat: no-repeat;
     width: 512px;
     height: 256px;
@@ -183,7 +183,7 @@
     display: none;
   }
   .town__img-container {
-    background-image: url("../img/desktop/photo-city-desktop.jpg");
+    background-image: url("../img/desktop/photo-city-desktop.webp");
     width: 800px;
   }
   .town {
