--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
 @import "variables.scss";
 @import "page.scss";
-@import "blocks/normalize.scss";
+@import "normalize.scss";
 @import "blocks/color-card.scss";
 @import "blocks/features.scss";
 @import "blocks/intro.scss";
