--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,7 +12,7 @@
 @import "blocks/main-nav.scss";
 @import "blocks/intro-form.scss";
 @import "blocks/form-feedback.scss";
-@import "media.scss";
+@import "blocks/media.scss";
 @import "global.scss";
 @import "blocks/feedback.scss";
 @import "blocks/video.scss";
