--- a/source/sass/blocks/intro-form.scss
+++ b/source/sass/blocks/intro-form.scss
@@ -1,5 +1,5 @@
 .intro-form {
-  background-image: url("../img/form/logo-form-mobile.webp");
+  background-image: url("../img/form/logo-form-mobile.jpg");
   background-repeat: no-repeat;
   width: 320px;
   height: 170px;
@@ -8,7 +8,7 @@
 
 @media (min-width: $tablet-width) {
   .intro-form {
-    background-image: url("../img/form/logo-form-tablet.webp");
+    background-image: url("../img/form/logo-form-tablet.jpg");
     background-repeat: no-repeat;
     width: 768px;
     height: 350px;
@@ -18,7 +18,7 @@
 
 @media (min-width: $desktop-width) {
   .intro-form {
-    background-image: url("../img/form/logo-form-desktop1.webp");
+    background-image: url("../img/form/logo-form-desktop1.jpg");
     width: 1200px;
     height: 370px;
   }
