--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,18 +1,18 @@
 @import "variables.scss";
 @import "page.scss";
 @import "normalize.scss";
-@import "color-card.scss";
-@import "features.scss";
-@import "intro.scss";
-@import "description.scss";
-@import "town.scss";
-@import "interesting.scss";
-@import "social.scss";
-@import "item-logo.scss";
-@import "main-nav.scss";
-@import "intro-form.scss";
-@import "form-feedback.scss";
-@import "media.scss";
+@import "blocks/color-card.scss";
+@import "blocks/features.scss";
+@import "blocks/intro.scss";
+@import "blocks/description.scss";
+@import "blocks/town.scss";
+@import "blocks/interesting.scss";
+@import "blocks/social.scss";
+@import "blocks/item-logo.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/intro-form.scss";
+@import "blocks/form-feedback.scss";
+@import "blocks/media.scss";
 @import "global.scss";
-@import "feedback.scss";
-@import "video.scss";
+@import "blocks/feedback.scss";
+@import "blocks/video.scss";
