--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,6 +2,7 @@
 $basic-blue: #81b3d2;
 $blue-hover: #669ec0;
 $blue-active: #5496bd;
+$blue-shadow: #678fa8;
 $basic-gray: #eeeeee;
 $gray-disable: #e5e5e5;
 $gray-iconbg: #e6e6e6;
