--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -26,7 +26,7 @@ $desktop-width-container: 1200px;
 
 //Template Fonts
 @font-face {
-  font-family: "PT Sans";
+  font-family: "PT Sans", "Arial";
   src:url("../fonts/ptsans.woff2") format("woff2"),
     url("../fonts/ptsans.woff") format("woff");
   font-weight: normal;
@@ -34,7 +34,7 @@ $desktop-width-container: 1200px;
 }
 
 @font-face {
-  font-family: "PT Sans";
+  font-family: "PT Sans", "Arial";
   src: url("../fonts/ptsansbold.woff2") format("woff2"),
     url("../fonts/ptsansbold.woff") format("woff");
   font-weight: 700;
