Исправлены ошибки в разметке по методологии (Б5)

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -88,7 +88,7 @@
   background: linear-gradient(to top, $blue-shadow 0,transparent 5px);
 }
 
-.main-nav__item--logo {
+.main-nav__item-logo {
   width: 50px;
   height: 55px;
   position: relative;
@@ -172,7 +172,7 @@
   .main-nav__item:last-child {
     order: 1;
   }
-  .main-nav__item--logo {
+  .main-nav__item-logo {
     position: absolute;
     top: -55px;
     left: 43%;
