--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,4 +1,4 @@
-.page__container {
+.page-container {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -9,14 +9,14 @@
 }
 
 @media (min-width: $tablet-width) {
-  .page__container {
+  .page-container {
     max-width: $tablet-width-container;
     margin: 0 auto;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page__container {
+  .page-container {
     max-width: $desktop-width-container;
     margin: 0 auto;
     box-shadow: 0px 5px 15px $gray-border-shadow;
