Для блока, у которого есть фоновое изображение, прописан фоновый цвет (Д6)

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -34,6 +34,10 @@
   margin-top: 10px;
 }
 
+.features__container {
+  background-color: $basic-gray;
+}
+
 .features__block-border::before {
   content: "";
   position: absolute;
