--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,8 +1,9 @@
 .intro {
   background-image: url("../img/header/logo-mobile.jpg");
   background-repeat: no-repeat;
+  background-color: $basic-blue;
   width: 320px;
-  height: 390px;
+  height: 389px;
   position: relative;
 }
 
