--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -143,6 +143,10 @@
   .social {
     max-width: 960px;
     margin: 0 auto;
+    margin-top: 133px;
+  }
+  .social-form {
+    margin: 0 auto;
     margin-top: 108px;
   }
   .social-feedback {
