--- a/source/sass/blocks/town.scss
+++ b/source/sass/blocks/town.scss
@@ -22,6 +22,10 @@
   text-transform: uppercase;
 }
 
+.town__img-container {
+  background-color: $basic-gray;
+}
+
 .town__housing,
 .town__souvenirs,
 .town__food {
