--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -25,7 +25,7 @@
 }
 
 .description__catalog-title {
-  margin-top: 20px;
+  margin-top: 35px;
 }
 
 .description__text {
@@ -64,7 +64,7 @@
   }
   .description__general-title {
     font-size: 30px;
-    margin-top: 9px;
+    margin-top: 65px;
   }
   .description__general-text {
     width: 440px;
@@ -84,6 +84,12 @@
 @media (min-width: $desktop-width) {
   .description {
     margin-top: 56px;
+  }
+  .description__general-title {
+    margin-top: 100px;
+  }
+  .description__catalog-subtitle{
+    margin-top: 50px;
   }
   .description-border {
     margin-top: 62px;
