--- a/source/sass/blocks/intro-form.scss
+++ b/source/sass/blocks/intro-form.scss
@@ -1,8 +1,9 @@
 .intro-form {
   background-image: url("../img/form/logo-form-mobile.jpg");
   background-repeat: no-repeat;
+  background-color: $basic-blue;
   width: 320px;
-  height: 170px;
+  height: 157px;
   position: relative;
 }
 
@@ -11,7 +12,7 @@
     background-image: url("../img/form/logo-form-tablet.jpg");
     background-repeat: no-repeat;
     width: 768px;
-    height: 350px;
+    height: 289px;
     margin: 0 auto;
   }
 }
@@ -20,6 +21,6 @@
   .intro-form {
     background-image: url("../img/form/logo-form-desktop1.jpg");
     width: 1200px;
-    height: 370px;
+    height: 302px;
   }
 }
