--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -20,6 +20,18 @@
   margin: 0;
 }
 
+.features__text-block1 {
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 281px;
+}
+
+.features__text-block3 {
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 249px;
+}
+
 .features__number {
   margin-top: 7px;
 }
@@ -51,7 +63,7 @@
 }
 
 .features__block-container {
-  padding: 18px 0px 25px 0;
+  padding: 25px 0px 19px 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -70,6 +82,11 @@
     height: 256px;
     order: -1;
   }
+
+  .features__block-container {
+    padding: 20px 0 19px;
+  }
+
   .features__container img{
     display: none;
   }
