--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -63,7 +63,7 @@
 }
 
 .features__block-container {
-  padding: 25px 0px 19px 0;
+  padding: 25px 0 19px 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -74,6 +74,7 @@
     margin-top: 64px;
     max-width: 768px;
   }
+
   .features__container {
     background-image: url("../img/tablet/devil-bridge.webp");
     background-repeat: no-repeat;
@@ -87,35 +88,42 @@
     padding: 20px 0 19px;
   }
 
-  .features__container img{
+  .features__container img {
     display: none;
   }
+
   .features__block {
     display: flex;
     flex-direction: column;
     width: 256px;
     height: 256px;
   }
+
   .features__block-border::before {
     display: none;
   }
+
   .features__title {
     font-size: 22px;
     width: 150px;
     margin: 0 auto;
     margin-top: 25px;
   }
+
   .features__text {
     width: 180px;
     margin: 0 auto;
     line-height: 1.7;
   }
+
   .features__text-width {
     width: 145px;
   }
+
   .features__number-tablet {
     margin: 11px 0 21px 0;
   }
+
   .features__number {
     margin: 15px 0 11px 0;
   }
@@ -126,17 +134,21 @@
     max-width: 1200px;
     margin-top: 81px;
   }
+
   .features__container {
     background-image: url("../img/desktop/photo-bridge.webp");
     width: 800px;
   }
+
   .features__text {
     width: 290px;
   }
+
   .features__text-width {
     width: 270px;
   }
+
   .features__block {
     min-width: 400px;
-}
+  }
 }
