--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -81,10 +81,10 @@
   content: "";
   position: absolute;
   top: 34px;
-  left: 0px;
+  left: 0;
   width: 100%;
   height: 20px;
-  background: linear-gradient(to top, $blue-shadow 0,transparent 5px);
+  background: linear-gradient(to top, $blue-shadow 0, transparent 5px);
 }
 
 .main-nav__item-logo {
@@ -129,25 +129,31 @@
     max-width: 768px;
     margin: 0 auto;
   }
+
   .main-nav__wrapper {
     height: 55px;
   }
+
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     padding-top: 15px;
   }
+
   .main-nav__text:hover {
     color: $blue-hover;
   }
+
   .main-nav__text:active {
     color: $blue-active;
   }
+
   .main-nav__text:active:disabled {
     background-color: $gray-disable;
     color: $basic-white;
   }
+
   .main-nav__link:hover,
   .main-nav__link:active {
     background-color: transparent;
@@ -156,26 +162,32 @@
   .main-nav__item {
     width: 20%;
   }
+
   .main-nav__item:nth-child(1),
   .main-nav__item:nth-child(2) {
     order: 0;
   }
+
   .main-nav__item:nth-child(3) {
     order: 2;
     margin-left: 3px;
   }
+
   .main-nav__item:nth-child(4) {
     order: 3;
     margin-left: -3px;
   }
+
   .main-nav__item:last-child {
     order: 1;
   }
+
   .main-nav__item-logo {
     position: absolute;
     top: -55px;
     left: 43%;
-}
+  }
+
   .main-nav__link {
     padding: 0;
     color: $basic-black;
@@ -183,10 +195,12 @@
     box-shadow: none;
     font-size: 14px;
   }
+
   .main-nav__icon-logo {
     left: 4%;
     top: 0;
   }
+
   .main-nav__toggle,
   .main-nav__close-button {
     display: none;
@@ -197,15 +211,19 @@
   .main-nav {
     max-width: 1200px;
   }
+
   .main-nav__item:nth-child(3) {
     margin-left: 0;
   }
+
   .main-nav__item:nth-child(4) {
     margin-left: 0;
   }
+
   .main-nav__icon-logo {
     display: none;
   }
+
   .main-nav__icon-logo-desktop {
     display: block;
     position: absolute;
