--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -6,7 +6,7 @@
   font-size: 21px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0px 0 15px 0px;
+  margin: 0 0 15px 0;
 }
 
 .social__item {
