--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -19,6 +19,6 @@
   .page-container {
     max-width: $desktop-width-container;
     margin: 0 auto;
-    box-shadow: 0px 5px 15px $gray-border-shadow;
+    box-shadow: 0 5px 15px $gray-border-shadow;
   }
 }
