--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,7 @@ $gray-input2: #eaeaea;
 $gray-border: #d6d6d6;
 $basic-white: #ffffff;
 $basic-black: #000000;
-$black-transperent: rgba(0,0,0,.3);
+$black-transperent: rgba(0, 0, 0, 0.3);
 $gray-border-shadow: rgba(0, 1, 1, 0.2);
 
 //Template breakpoints
